apply comments 2